--- a/templates/game_difficulty_database/game_list.html
+++ b/templates/game_difficulty_database/game_list.html
@@ -1,5 +1,3 @@
-{% extends 'game_difficulty_database/base.html' %}
-
 {% block content %}
     <h2>Game List</h2>
     <form method="get">
@@ -8,9 +6,12 @@
     </form>
     <ul>
         {% for game in games %}
-            <li>{{ game.name }} - Difficulty: {{ game.get_difficulty_display }}</li>
+            <li>
+                <a href="{% url 'game_detail' game.id %}">{{ game.name }}</a> - Difficulty: {{ game.get_difficulty_display }}
+            </li>
         {% empty %}
             <li>No games found.</li>
         {% endfor %}
     </ul>
+    <a href="{% url 'add_game' %}">Add New Game</a>
 {% endblock %}
