--- a/templates/game_difficulty_database/game_detail.html
+++ b/templates/game_difficulty_database/game_detail.html
@@ -1,10 +1,12 @@
-{% extends 'base.html' %}
-
 {% block content %}
 <h1>{{ game.name }}</h1>
 <p><strong>Difficulty:</strong> {{ game.get_difficulty_display }}</p>
 <p><strong>Release Date:</strong> {{ game.release_date }}</p>
-<p><strong>New Game Plus:</strong> {% if game.NGplus %}Yes{% else %}No{% endif %}</p>
 <p><strong>Description:</strong> {{ game.description }}</p>
+<p><strong>Enemy Health:</strong> {{ game.enemy_health }}%</p>
+<p><strong>Player Health:</strong> {{ game.player_health }}%</p>
+<p><strong>Resources:</strong> {{ game.resources }}%</p>
+<p><strong>Unlockable:</strong> {% if game.unlockable %}Yes{% else %}No{% endif %}</p>
+<p><strong>New Game Plus:</strong> {% if game.new_game_plus %}Yes{% else %}No{% endif %}</p>
 <a href="{% url 'game_list' %}">Back to Game List</a>
 {% endblock %}
