--- a/game_difficulty_database/templates/game_difficulty_database/add_game.html
+++ b/game_difficulty_database/templates/game_difficulty_database/add_game.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Add New Game</h2>
+<h1>Add New Game</h1>
 <form method="post">
     {% csrf_token %}
     {{ form.non_field_errors }}
@@ -35,10 +35,15 @@
     {% for difficulty, display in form.instance.DIFFICULTY_CHOICES %}
         <fieldset>
             <legend>{{ display }}</legend>
-            {% for setting in "player_health,enemy_health,resources,enemy_damage".split(',') %}
+            {% for setting in settings %}
                 <div>
-                    <label for="id_{{ difficulty }}_{{ setting }}">{{ setting|title }}:</label>
-                    <input type="number" name="{{ difficulty }}_{{ setting }}" id="id_{{ difficulty }}_{{ setting }}" min="0" max="200" value="100">
+                    {% with field_name=difficulty|add:"_"|add:setting %}
+                        {{ form.errors.difficulty_settings }}
+                        <label for="id_{{ field_name }}">{{ setting|title }}:</label>
+                        <input type="number" name="{{ field_name }}" id="id_{{ field_name }}" 
+                               value="{{ form.initial.difficulty_settings|default:{}|get_item:difficulty|default:{}|get_item:setting|default:100 }}"
+                               min="0" max="200">
+                    {% endwith %}
                 </div>
             {% endfor %}
         </fieldset>
