--- a/templates/base.html
+++ b/templates/base.html
@@ -3,19 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Difficulty Database</title>
+    <title>{% block title %}Game Difficulty Database{% endblock %}</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <header>
-        <h1>Game Difficulty Database</h1>
         <nav>
-            <a href="{% url 'game_list' %}">Home</a>
-            <a href="{% url 'add_game' %}">Add Game</a>
+            <ul>
+                <li><a href="{% url 'game_list' %}">Home</a></li>
+                <li><a href="{% url 'add_game' %}">Add Game</a></li>
+            </ul>
         </nav>
     </header>
     <main>
         {% block content %}
         {% endblock %}
     </main>
+    <footer>
+        <p>&copy; 2024 Game Difficulty Database</p>
+    </footer>
 </body>
 </html>
