--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
             <ul>
                 <li><a href="{% url 'game_list' %}">Home</a></li>
                 <li><a href="{% url 'add_game' %}">Add Game</a></li>
+                <li><a href="{% url 'blog_list' %}">Blog</a></li>
             </ul>
         </nav>
     </header>
