--- a/templates/base.html
+++ b/templates/base.html
@@ -14,9 +14,12 @@
                 <li><a href="{% url 'game_list' %}">Home</a></li>
                 <li><a href="{% url 'add_game' %}">Add Game</a></li>
                 <li><a href="{% url 'blog_list' %}">Blog</a></li>
-                <li><a href="{% url 'account_signup' %}">Register</a></li>
-                <li><a href="{% url 'account_login' %}">Login</a></li>
-                <li><a href="{% url 'account_logout' %}">Logout</a></li>
+                {% if user.is_authenticated %}
+                    <li><a href="{% url 'account_logout' %}">Logout</a></li>
+                {% else %}
+                    <li><a href="{% url 'account_signup' %}">Register</a></li>
+                    <li><a href="{% url 'account_login' %}">Login</a></li>
+                {% endif %}
             </ul>
         </nav>
     </header>
