--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -189,3 +189,6 @@ a:focus, button:focus, input:focus, textarea:focus {
         margin-bottom: 10px;
     }
 }
+account-form {
+    /* Your custom styles */
+}
