--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -5,15 +5,38 @@
 {% if user.is_staff %}
     <a href="{% url 'add_blog_post' %}" class="btn btn-primary">Add New Post</a>
 {% endif %}
-<ul>
+<ul class="blog-list">
 {% for post in posts %}
-    <li>
-        <h2><a href="{% url 'blog_detail' post.id %}">{{ post.title }}</a></h2>
-        <p>{{ post.content|truncatewords:30 }}</p>
-        <p>Published on: {{ post.date_published|date:"F j, Y" }}</p>
+    <li class="blog-post">
+        <h2 class="blog-title"><a href="{% url 'blog_detail' post.id %}">{{ post.title }}</a></h2>
+        {% if post.image %}
+            <img src="{{ post.image.url }}" alt="{{ post.title }}" style="width: 100px; height: auto;">
+        {% endif %}
+        <p class="blog-excerpt">{{ post.content|truncatewords:30 }}</p>
+        <p class="blog-meta">Published on: {{ post.date_published|date:"F j, Y" }} by {{ post.author.username }}</p>
     </li>
 {% empty %}
-    <li>No posts yet.</li>
+    <li class="no-posts">No posts yet.</li>
 {% endfor %}
 </ul>
+
+{% if posts.has_other_pages %}
+  <nav>
+    <ul class="pagination">
+      {% if posts.has_previous %}
+        <li><a href="?page={{ posts.previous_page_number }}">&laquo;</a></li>
+      {% endif %}
+      {% for i in posts.paginator.page_range %}
+        {% if posts.number == i %}
+          <li class="active"><span>{{ i }}</span></li>
+        {% else %}
+          <li><a href="?page={{ i }}">{{ i }}</a></li>
+        {% endif %}
+      {% endfor %}
+      {% if posts.has_next %}
+        <li><a href="?page={{ posts.next_page_number }}">&raquo;</a></li>
+      {% endif %}
+    </ul>
+  </nav>
+{% endif %}
 {% endblock %}
