text change to game_details, recomended

--- a/game_difficulty_database/templates/game_difficulty_database/game_detail.html
+++ b/game_difficulty_database/templates/game_difficulty_database/game_detail.html
@@ -6,7 +6,7 @@
     <img src="{{ game.image.url }}" alt="{{ game.name }}" style="max-width: 300px; height: auto;">
 {% endif %}
 <p>{{ game.description }}</p>
-<p>Default Difficulty: {{ game.get_default_difficulty_display }}</p>
+<p>Recommended Difficulty: {{ game.get_recommended_difficulty_display }}</p>
 
 <h2>Difficulty Settings</h2>
 <table>
