--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Game Difficulty Database{% endblock %}</title>
     {% load static %}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/allauth_custom.css' %}">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 <body>
     <header>
@@ -24,12 +26,58 @@
             </ul>
         </nav>
     </header>
+
     <main>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 offset-md-2">
+                    {% for message in messages %}
+                    <div class="alert {% if message.tags %}{{ message.tags }}{% endif %} alert-dismissible fade show"
+                        id="msg" role="alert">
+                        {{ message | safe }}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+
         {% block content %}
         {% endblock %}
     </main>
+
     <footer>
         <p>&copy; 2024 Game Difficulty Database</p>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    {% if messages %}
+    <div id="django-messages" data-messages="{{ messages|safe }}"></div>
+{% endif %}
+
+<script>
+    document.addEventListener('DOMContentLoaded', (event) => {
+        const messagesElement = document.getElementById('django-messages');
+        if (messagesElement) {
+            const messages = JSON.parse(messagesElement.dataset.messages);
+            messages.forEach(message => {
+                Toastify({
+                    text: message.message,
+                    duration: 3000,
+                    close: true,
+                    gravity: "top",
+                    position: "right",
+                    backgroundColor: message.tags.includes('success') 
+                        ? "linear-gradient(to right, #00b09b, #96c93d)" 
+                        : "linear-gradient(to right, #ff5f6d, #ffc371)",
+                }).showToast();
+            });
+        }
+    });
+</script>
+
+    {% block extra_js %}
+    {% endblock %}
 </body>
 </html>
