--- a/blog/templates/blog/add_blog.html
+++ b/blog/templates/blog/add_blog.html
@@ -1,18 +1,22 @@
 {% extends 'base.html' %}
 
-{% block title %}{% if editing %}Edit{% else %}Add New{% endif %} Blog Post{% endblock %}
+{% block title %}
+    {% if editing %}Edit{% else %}Add New{% endif %} Blog Post
+{% endblock %}
 
 {% block content %}
 <div class="container mt-4">
     <h1>{% if editing %}Edit{% else %}Add New{% endif %} Blog Post</h1>
+
     {% if messages %}
         {% for message in messages %}
             <div class="alert alert-{{ message.tags }}">{{ message }}</div>
         {% endfor %}
     {% endif %}
+
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        
+
         <div class="form-group">
             <label for="{{ form.title.id_for_label }}">Title:</label>
             {{ form.title }}
@@ -37,8 +41,11 @@
             {% endif %}
         </div>
 
-        <button type="submit" class="btn btn-primary">{% if editing %}Update{% else %}Create{% endif %} Post</button>
+        <button type="submit" class="btn btn-primary">
+            {% if editing %}Update{% else %}Create{% endif %} Post
+        </button>
     </form>
+
     <a href="{% url 'blog_list' %}" class="btn btn-secondary mt-2">Cancel</a>
 </div>
 {% endblock %}
