--- a/static/css/allauth_custom.css
+++ b/static/css/allauth_custom.css
@@ -4,7 +4,7 @@
     padding: 20px;
     background-color: #f9f9f9;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .account-form h1 {
@@ -43,6 +43,7 @@
     padding: 0;
     margin-bottom: 15px;
 }
+
 .home-button {
     display: inline-block;
     padding: 10px 15px;
